fix button is square on iphone/ipad

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ input{
     margin-bottom: 10px;
     margin-left: 2px;
     text-align: center;
+    -webkit-appearance: none;
 }
 
 .zero{
@@ -104,7 +105,6 @@ input{
     background-color: #d4d4d2;
     color: black;
     font-size: 27px;
-    text-align: center;
 }
 
 #clear-btn:hover{
